--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <p class="text-center">Contact Me</p>
           <div class="text-center">
             <!-- Social Media Links -->
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/alishia-kanarek-35b40727a" class="btn btn-dark me-2"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
       </div>
