--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="index.html">alishiak.github.io</a>
       <ul class="navbar-nav ms-auto">
         <!-- Add additional navigation items if needed -->
       </ul>
@@ -130,6 +130,7 @@
 		    <li>Debated pressing global issues and discussed current events</li>
 			<li>Practiced public speaking and sharing improvised speeches</li>
 			<li>Practiced productive independent research in preparation for conferences</li>
+			<p></p>
 		  </ul>
 		</li>
 		<li>
