--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <!-- Personal Information -->
         <h2>Alishia Kanarek</h2>
         <p><strong>Email:</strong> alishiakanarek@gmail.com</p>
-        <p><strong>Phone:</strong> (XXX) XXX-XXXX</p>
-        <p><strong>Address:</strong> N/A</p>
+        <p><strong>Phone:</strong> (516) 974-1100</p>
+        <p><strong>City:</strong> Port Washington</p>
       </div>
       <div class="col-md-6 text-md-end">
         <!-- Profile Picture -->
@@ -52,7 +52,7 @@
 
     <h4>About me</h4>
     <!-- Objective Statement -->
-    <p>Hello! I am a motivated high school student looking for a start to my professional career!</p>
+    <p>Hello! I am a motivated high school student who is about to start attending a university!</p>
 
     <h4>Education</h4>
     <ul>
@@ -62,7 +62,7 @@
 		<p></p>
         <p>Paul D. Schreiber High School</p>
         <p>Graduation date: June 2024</p>
-		<p>GPA: N/A</p>
+		<p>GPA: 4.32</p>
 		<p>Awards: Principal's Honor Roll</p>
 	  </li>
 	  <li>
@@ -125,7 +125,7 @@
 	<ul>
 		<li>
 		  <h5>Model United Nations</h5>
-		  <p>2022-2024, High School Club</p>
+		  <p>2022-2024, High School Club - Member</p>
 		  <ul>
 		    <li>Debated pressing global issues and discussed current events</li>
 			<li>Practiced public speaking and sharing improvised speeches</li>
@@ -135,12 +135,29 @@
 		</li>
 		<li>
 		  <h5>Class of 2024 Club</h5>
-		  <p>2023-2024, High School Club</p>
+		  <p>2022-2024, High School Club - Treasurer</p>
 		  <ul>
-		    <li>Encouraged grade spirit</li>
-			<li>Planned and carried out club fundraisers</li>
-			<li>Planned and budgeted big school events (i.e. Junior Prom, soon Senior Prom).</li>
-		  </ul>
+			  <li>Encouraged school spirit</li>
+			  <li>Planned and carried out club fundraisers</li>
+			  <li>Planned and budgeted large school events (i.e. Junior Prom)</li>
+		 </ul>
+		</li>
+		<li>
+		   <h5>Senior Experience Internship</h5>
+		   <p>2024-Ongoing, Internship - Teaching Assistant in a science classroom</p>
+		   <ul>
+			   <li>Managing the safety of the laboratory. This includes cleaning and organizing laboratory <br>supplies and removing broken supplies using proper procedures</li>
+			   <li>Peer tutoring and preparing students for upcoming exams</li>
+			   <li>Providing technology support to teachers and students</li>
+		   </ul>
+		</li>
+		<li>
+			<h5>Writing Center Peer Tutoring</h5>
+			<p>2024-Ongoing, Volunteer position - Tutor</p>
+			<ul>
+				<li>The Writing Center is a classroom in Schreiber High School where students can come during their lunch periods to recieve help with their essays</li>
+				<li>I help students in the Writing Center at least once every class cycle</li>
+			</ul>
 		</li>
 	</ul>
   </div>
