--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			<h5>Senior Experience Internship</h5>
 			<p>2024-Ongoing, Internship - Teaching Assistant in a science classroom</p>
 			<ul>
-				<li>Managing the safety of the laboratory. This includes cleaning and organizing laboratory <br>supplies and removing broken supplies using proper procedures</li>
+				<li>Managing the safety of the laboratory. This includes cleaning and organizing laboratory supplies and removing broken supplies using proper procedures</li>
 				<li>Peer tutoring and preparing students for upcoming exams</li>
 				<li>Providing technology support to teachers and students</li>
 				<p></p>
