--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<hr>
 		<h4>About me</h4>
     		<!-- Objective Statement -->
-    		<p>Hello! I am a motivated high school student who is about to start attending a university!</p>
+    		<p>Hello! I am a motivated high school student who is about to start attending a university! Throughout high school, I have enjoyed participating in clubs as well as volunteering at my school and in my community. I am also a high-achieving student in my classes.</p>
 		<h4>Education</h4>
 		<ul>
 			<li>
