--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<hr>
 		<h4>About me</h4>
     		<!-- Objective Statement -->
-    		<p>Hello! I am a motivated high school student who is about to start attending a university! Throughout high school, I have enjoyed participating in clubs as well as volunteering at my school and in my community. I am also a high-achieving student in my classes.</p>
+    		<p>Hello! I am a motivated high school student looking to begin my professional career! Throughout high school, I enjoyed participating in clubs and volunteering within my school and community. I am also a high-achieving student in my classes. If you have any questions regarding my experiences and qualifications, please get in touch with me via email.</p>
 		<h4>Education</h4>
 		<ul>
 			<li>
