--- a/index.html
+++ b/index.html
@@ -123,24 +123,35 @@
 	<ul>
 		<li>
 			<h5>Model United Nations</h5>
-			<p>2022-2024, High School Club - Member</p>
+			<p>2022-Ongoing, High School Club - Member</p>
 			<ul>
-				<li>Debated pressing global issues and discussed current events</li>
-				<li>Practiced public speaking and sharing improvised speeches</li>
-				<li>Practiced productive independent research in preparation for conferences</li>
+				<li>Debating pressing global issues and discussing current events at regional conferences</li>
+				<li>Practicing public speaking and improvising speeches</li>
+				<li>Practicing productive, independent research in preparation for conferences</li>
 				<p></p>
 			</ul>
 		</li>
 		
 		<li>
 			<h5>Class of 2024 Club</h5>
-			<p>2022-2024, High School Club - Treasurer</p>
+			<p>2022-Ongoing, High School Club - Treasurer</p>
 			<ul>
-				<li>Encouraged school spirit</li>
-				<li>Planned and carried out club fundraisers</li>
-				<li>Planned and budgeted large school events (i.e. Junior Prom)</li>
+				<li>Encouraging school spirit</li>
+				<li>Planning and carrying out club fundraisers</li>
+				<li>Planning and budgeting large school events (i.e. Junior Prom)</li>
 				<p></p>
 			</ul>
+		</li>
+
+		<li>
+			<h5>The Port Washington Youth Council</h5>
+			<p>2023-Ongoing, Landmark Organization - Secretary</p>
+			<ul>
+				<li>Organizing activities in a safe space for middle-school and high-school-aged students</li>
+				<li>Collaborating with other members to come up with new ideas for events and recording our meetings</li>
+				<li>Occasional opportunities to volunteer in other branches of the Landmark</li>
+				<p></p>
+			</ul>	
 		</li>
 		
 		<li>
