--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 		<h4>About me</h4>
     		<!-- Objective Statement -->
     		<p>Hello! I am a motivated high school student looking to begin my professional career! Throughout high school, I enjoyed participating in clubs and volunteering within my school and community. I am also a high-achieving student in my classes. If you have any questions regarding my experiences and qualifications, please get in touch with me via email.</p>
+		
+		<h4>Interests and Goals</h4>
+		<p>In my free time, I love to spend my time gardening, knitting, baking and playing video games.</p>
+		<p>During the fall of 2024, I intend to enter a 4-year university to study electrical engineering. Creating a more sustainable world has always been an interest of mine, so I plan to use my time at university to push myself towards a career in clean energy.</p>
+		
 		<h4>Education</h4>
 		<ul>
 			<li>
