--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         		</ul>
       		</li>
     	</ul>
-	<h4>Extracirricular Activities</h4>
+	<h4>Extracurricular Activities</h4>
 	<ul>
 		<li>
 			<h5>Model United Nations</h5>
