--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		
 		<h4>Interests and Goals</h4>
 		<p>In my free time, I love to spend my time gardening, knitting, baking and playing video games.</p>
-		<p>During the fall of 2024, I intend to enter a 4-year university to study electrical engineering. Creating a more sustainable world has always been an interest of mine, so I plan to use my time at university to push myself towards a career in clean energy.</p>
+		<p>In August of 2024, I will begin studying electrical engineering at the University of Buffalo. Creating a more sustainable world has always been an interest of mine, so I plan to use my time at university to push myself towards a career in clean energy.</p>
 		
 		<h4>Education</h4>
 		<ul>
@@ -63,7 +63,7 @@
 				<!-- Education Institution -->
 				<p></p>
         			<p>Paul D. Schreiber High School</p>
-        			<p>Graduation date: June 2024</p>
+        			<p>Graduation date: June 25th, 2024</p>
 				<p>GPA: 4.32</p>
 				<p>Awards: Principal's Honor Roll</p>
 			</li>
@@ -120,7 +120,7 @@
 			<ul>
           			<li>Ensured the marina remained operational; checked the marina and boats for damage, kept the area tidy, cleaned the bathrooms and trash, and watered the plants</li>
           			<li>Assisted customers and potential customers in the office and over the phone</li>
-          			<li>Wrote work orders and accepted rent payments</li>
+          			<li>Managed the money on the premises; wrote work orders and accepted rent payments</li>
         		</ul>
       		</li>
     	</ul>
@@ -128,7 +128,7 @@
 	<ul>
 		<li>
 			<h5>Model United Nations</h5>
-			<p>2022-Ongoing, High School Club - Member</p>
+			<p>2022-2024, High School Club - Member</p>
 			<ul>
 				<li>Debating pressing global issues and discussing current events at regional conferences</li>
 				<li>Practicing public speaking and improvising speeches</li>
@@ -139,7 +139,7 @@
 		
 		<li>
 			<h5>Class of 2024 Club</h5>
-			<p>2022-Ongoing, High School Club - Treasurer</p>
+			<p>2022-2024 - Treasurer</p>
 			<ul>
 				<li>Encouraging school spirit</li>
 				<li>Planning and carrying out club fundraisers</li>
@@ -150,7 +150,7 @@
 
 		<li>
 			<h5>The Port Washington Youth Council</h5>
-			<p>2023-Ongoing, Landmark Organization - Secretary</p>
+			<p>2023-2024, Landmark Organization - Secretary</p>
 			<ul>
 				<li>Organizing activities in a safe space for middle-school and high-school-aged students</li>
 				<li>Collaborating with other members to come up with new ideas for events and recording our meetings</li>
@@ -171,7 +171,7 @@
 		</li>
 		<li>
 			<h5>Writing Center Peer Tutoring</h5>
-			<p>2024-Ongoing, Volunteer position - Tutor</p>
+			<p>2024, Volunteer position - Tutor</p>
 			<ul>
 				<li>The Writing Center is a classroom in Schreiber High School where students can come during their lunch periods to recieve help with their essays</li>
 				<li>I help students in the Writing Center at least once every class cycle</li>
