--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 			<h5>Model United Nations</h5>
 			<p>2022-2024, High School Club - Member</p>
 			<ul>
-				<li>Debating pressing global issues and discussing current events at regional conferences</li>
-				<li>Practicing public speaking and improvising speeches</li>
-				<li>Practicing productive, independent research in preparation for conferences</li>
+				<li>Debated pressing global issues and discussed current events at regional conferences</li>
+				<li>Practiced public speaking and improvised speeches</li>
+				<li>Practiced productive, independent research in preparation for conferences</li>
 				<p></p>
 			</ul>
 		</li>
@@ -141,9 +141,9 @@
 			<h5>Class of 2024 Club</h5>
 			<p>2022-2024 - Treasurer</p>
 			<ul>
-				<li>Encouraging school spirit</li>
-				<li>Planning and carrying out club fundraisers</li>
-				<li>Planning and budgeting large school events (i.e. Junior Prom)</li>
+				<li>Encouraged school spirit</li>
+				<li>Planned and carried out club fundraisers</li>
+				<li>Planned and budgeted large school events (i.e. Junior Prom)</li>
 				<p></p>
 			</ul>
 		</li>
@@ -152,8 +152,8 @@
 			<h5>The Port Washington Youth Council</h5>
 			<p>2023-2024, Landmark Organization - Secretary</p>
 			<ul>
-				<li>Organizing activities in a safe space for middle-school and high-school-aged students</li>
-				<li>Collaborating with other members to come up with new ideas for events and recording our meetings</li>
+				<li>Organized activities in a safe space for middle-school and high-school-aged students</li>
+				<li>Collaborated with other members to come up with new ideas for events and recording our meetings</li>
 				<li>Occasional opportunities to volunteer in other branches of the Landmark</li>
 				<p></p>
 			</ul>	
@@ -174,7 +174,7 @@
 			<p>2024, Volunteer position - Tutor</p>
 			<ul>
 				<li>The Writing Center is a classroom in Schreiber High School where students can come during their lunch periods to recieve help with their essays</li>
-				<li>I help students in the Writing Center at least once every class cycle</li>
+				<li>I helped students in the Writing Center at least once every class cycle</li>
 				<p></p>
 			</ul>
 		</li>
