--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         			<h2>Alishia Kanarek</h2>
         			<p><strong>Email:</strong> alishiakanarek@gmail.com</p>
         			<p><strong>Phone:</strong> (516) 974-1100</p>
-        			<p><strong>City:</strong> Port Washington</p>
+        			<p><strong>City:</strong> Port Washington (Long Island)</p>
       			</div>
       		<div class="col-md-6 text-md-end">
 			<!-- Profile Picture -->
@@ -50,16 +50,16 @@
 	<hr>
 		<h4>About me</h4>
     		<!-- Objective Statement -->
-    		<p>Hello! I am a motivated high school student looking to begin my professional career! Throughout high school, I enjoyed participating in clubs and volunteering within my school and community. I am also a high-achieving student in my classes. If you have any questions regarding my experiences and qualifications, please get in touch with me via email.</p>
+    		<p>Hello! I am a motivated student looking to begin my professional career! Throughout high school, I enjoyed participating in clubs and volunteering within my school and community. I hope to learn as much as I can while I am at the University at Buffalo. If you have any questions regarding my experiences and qualifications, please get in touch with me via email.</p>
 		
 		<h4>Interests and Goals</h4>
-		<p>In my free time, I love to spend my time gardening, knitting, baking and playing video games.</p>
-		<p>In August of 2024, I will begin studying electrical engineering at the University of Buffalo. Creating a more sustainable world has always been an interest of mine, so I plan to use my time at university to push myself towards a career in clean energy.</p>
+		<p>In my free time, I love to spend my time gardening, baking, and learning.</p>
+		<p>I am currently a freshman in the electrical engineering program at the University at Buffalo. Right now, I am looking to get involved in projects and research both on and off the campus. Creating a more sustainable and efficient world has always been an interest of mine, so I ultimately plan to use my time here to push myself towards a career in clean energy.</p>
 		
 		<h4>Education</h4>
 		<ul>
 			<li>
-				<h5>Current High School Student</h5>
+				<h5>High School Graduate</h5>
 				<!-- Education Institution -->
 				<p></p>
         			<p>Paul D. Schreiber High School</p>
@@ -67,6 +67,13 @@
 				<p>GPA: 4.32</p>
 				<p>Awards: Principal's Honor Roll</p>
 			</li>
+			<li>
+				<h5>Current University Student</h5>
+				<p></p>
+				<p>The University at Buffalo (SUNY) - Buffalo, NY</p>
+				<p>Graduation year: 2028</p>
+				<p>Current status: Freshman</p>
+			</li>	
 			
 			<li>
 				<h5>Accomplished AP Student (AP Scores)</h5>
@@ -79,10 +86,10 @@
 					<p>AP Chemistry - 5</p>
 				</div>
 				<div class="column">
-					<p>AP Calculus AB - In progress</p>
-					<p>AP Physics 2 - In progress</p>
-					<p>AP Computer Science A - In progress</p>
-					<p>AP U.S. Government - In progress</p>
+					<p>AP Calculus AB - 5</p>
+					<p>AP Physics 2 - 3</p>
+					<p>AP Computer Science A - 4</p>
+					<p>AP U.S. Government - 5</p>
 				</div>
 				</div>
 			</li>
@@ -91,7 +98,7 @@
 	<h4>Skills and Qualifications</h4>
 	<ul>
 		<!-- List of Skills -->
-		<li>Proficient with Python and HTML</li>
+		<li>Proficient with Python, Java, and HTML</li>
 		<li>Experienced with Google Documents, Google Sheets, Google Slides, Microsoft Word, Microsoft Excel, and Microsoft PowerPoint</li>
 		<li>Intermediate Spanish speaker; Capable of reading, writing, and translating Spanish</li>
 		<li>Professional writing and proofreading abilities</li>
@@ -116,7 +123,7 @@
 			<p></p>
         		<h5>Marina Employee - Tom's Point Marina</h5>
         		<!-- Job Experience -->
-        		<p>Summers of 2022 and 2023, Part-time</p>
+        		<p>Summers of 2022, 2023, and 2024, Part-time</p>
 			<ul>
           			<li>Ensured the marina remained operational; checked the marina and boats for damage, kept the area tidy, cleaned the bathrooms and trash, and watered the plants</li>
           			<li>Assisted customers and potential customers in the office and over the phone</li>
@@ -154,14 +161,14 @@
 			<ul>
 				<li>Organized activities in a safe space for middle-school and high-school-aged students</li>
 				<li>Collaborated with other members to come up with new ideas for events and recording our meetings</li>
-				<li>Occasional opportunities to volunteer in other branches of the Landmark</li>
+				<li>Additional opportunities to volunteer in other branches of the Landmark</li>
 				<p></p>
 			</ul>	
 		</li>
 		
 		<li>
 			<h5>Senior Experience Internship</h5>
-			<p>2024-Ongoing, Internship - Teaching Assistant in a science classroom</p>
+			<p>2024, Internship - Teaching Assistant in a science classroom</p>
 			<ul>
 				<li>Managing the safety of the laboratory. This includes cleaning and organizing laboratory supplies and removing broken supplies using proper procedures</li>
 				<li>Peer tutoring and preparing students for upcoming exams</li>
